Fixed some spacing problems

--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -121,7 +121,7 @@
         align-items: center;
         justify-content: center;
         gap: 2vw;
-        margin-top: 100px;
+        margin-top: 150px;
     }
 
     .about-me-title {
